# feedsnooplyze

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  _config_mssql.yaml  _config_postgresql.yaml  _snooplyze.yaml  config.yaml  config.yaml.example  feedsnooplyze.yaml.example  pyproject.toml  requirements.txt  snooplyze.yaml  snooplyze.yaml.example  start.py
code/: start.py
code/configuration/: pages_config.py
code/data_parse/: data_parse.py
code/page/: page.py
code/parser/: __init__.py  generic_parsers.py  parser_registry.py
code/persistence/: persistence_engine.py
code/utils/: setup.py
docs/: gmail-setup.md  persistence-setup.md  technical-overview.md  telegram-setup.md
feedsnooplyze/: rss.py  start.py
feedsnooplyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
feedsnooplyze/configuration/: config.py  content_source_config.py  pages_config.py
feedsnooplyze/notifier/: console_notifier.py  email_notifier.py  flatfile_notifier.py  notifier.py  telegram_notifier.py
feedsnooplyze/page/: __init__.py
feedsnooplyze/parser/: __init__.py  parser_registry.py
feedsnooplyze/persistence/: __init__.py  duckdb_persistence_engine.py  mysql_persistence_engine.py  persistence_command.py  persistence_engine.py  persistence_registry.py  persistence_setup.py  postgresql_persistence_engine.py  sqlite_persistence_engine.py
feedsnooplyze/utils/: __init__.py  content_comparer.py  setup.py
snooplyze/: new_config.py  start.py  test_diff.py
snooplyze/configuration/: config.py  config_new.py  pages_config.py
snooplyze/notifier/: __init__.py  console_notifier.py  email_notifier.py  email_template.html  file_notifier.py  flatfile_notifier.py  notifier.py  telegram_notifier.py
snooplyze/page/: page.py  page_content.py  page_monitor.py
snooplyze/parser/: __init__.py  base_parser.py  custom_parsers.py  generic_parsers.py  parser_registry.py
snooplyze/utils/: setup.py  (+1 more)
ui-streamlit/: requirements.txt
(+37 files in other folders)
